--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -44,6 +44,7 @@ jobs:
           docker buildx build . --provenance=false --platform linux/${{matrix.arch}} --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-${{matrix.arch}} --push
 
   get_versions:
+    needs: build_archs
     runs-on: ubuntu-latest
     outputs:
       versions: ${{ steps.produce_output.outputs.versions }}    
@@ -78,8 +79,8 @@ jobs:
           echo "versions=$TAGS_JSON" >> "$GITHUB_OUTPUT"
           
   create_manifest:
-    runs-on: ubuntu-latest
     needs: get_versions
+    runs-on: ubuntu-latest
     strategy:
         matrix:
           version: ${{ fromJSON(needs.get_versions.outputs.versions) }}
