--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -132,6 +132,9 @@ jobs:
           version=$(echo "${{matrix.version}}" | awk -F':' '{print $2}')
           docker rmi ${{ env.REGISTRY_IMAGE }}:$version --force
           docker pull ${{ env.REGISTRY_IMAGE }}:$version 
-          docker run ${{ env.REGISTRY_IMAGE }}:$version  --version
+          version_output=$(docker run ${{ env.REGISTRY_IMAGE }}:$version  --version)
+          if [[ $(echo "$version_output" | grep -c "tokendito/${{steps.meta.outputs.version}}") -eq 0 ]]; then
+            exit 1
+          fi
         env:
           DOCKER_CONTENT_TRUST: 1
