--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -36,7 +36,7 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: jpsevigny
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and push linux/${{matrix.arch}}
@@ -89,7 +89,7 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: jpsevigny
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: create files for signing
