--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -116,6 +116,7 @@ jobs:
           DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:$version --amend ${{env.REGISTRY_IMAGE}}:${{ steps.meta.outputs.version }}-amd64 --amend ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
           docker manifest push ${{ env.REGISTRY_IMAGE }}:$version
           docker pull ${{ env.REGISTRY_IMAGE }}:$version 
+          docker trust revoke ${{ env.REGISTRY_IMAGE }}:$version || true # remove old signed image from notary
           docker trust sign ${{ env.REGISTRY_IMAGE }}:$version
           docker manifest push ${{ env.REGISTRY_IMAGE }}:$version 
         env: 
