--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -41,7 +41,8 @@ jobs:
           ${{ toJSON(fromJSON(steps.meta.outputs.json).tags) }}
           EOF
           )
-          TAGS_JSON=$(echo $TAGS_JSON | tr '\n' ' ')
+          TAGS_JSON=$(echo $TAGS_JSON | tr '\n' ' ') | sed "s/${{env.REGISTRY}}\///g" | sed "s/${{env.REGISTRY_IMAGE}}\://g"
+          echo "tags are $TAGS_JSON"
           echo "versions=$TAGS_JSON" >> "$GITHUB_OUTPUT"
 
   test_matrix:
