--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -41,7 +41,9 @@ jobs:
           ${{ toJSON(fromJSON(steps.meta.outputs.json).tags) }}
           EOF
           )
-          TAGS_JSON=$(echo $TAGS_JSON | tr '\n' ' ') | | sed "s|${{env.REGISTRY}}\/${{env.REGISTRY_IMAGE}}\:||g" 
+          string_to_remove="${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:"
+          echo "string to remove = $string_to_remove"
+          TAGS_JSON=$(echo $TAGS_JSON | tr '\n' ' ') | sed "s|$string_to_remove||g" 
           echo "tags are $TAGS_JSON"
           echo "versions=$TAGS_JSON" >> "$GITHUB_OUTPUT"
 
