--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -43,7 +43,7 @@ jobs:
           )
           string_to_remove="${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:"
           echo "string to remove = $string_to_remove"
-          TAGS_JSON=$(echo $TAGS_JSON | tr '\n' ' ') | sed "s|${{env.REGISTRY_IMAGE}}||g" 
+          TAGS_JSON=$(echo $TAGS_JSON | tr '\n' ' ' | sed "s|$string_to_remove||g" )
           echo "tags are $TAGS_JSON"
           echo "versions=$TAGS_JSON" >> "$GITHUB_OUTPUT"
 
