--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -75,7 +75,8 @@ jobs:
           ${{ toJSON(fromJSON(steps.meta.outputs.json).tags) }}
           EOF
           )
-          TAGS_JSON=$(echo $TAGS_JSON | tr '\n' ' ')
+          string_to_remove="${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:"
+          TAGS_JSON=$(echo $TAGS_JSON | tr '\n' ' ' | sed "s|$string_to_remove||g" )
           echo "versions=$TAGS_JSON" >> "$GITHUB_OUTPUT"
           
   create_manifest:
@@ -112,12 +113,11 @@ jobs:
         name: create manifest and push it
         # create and sign "$version" manifest
         run: | 
-          version=$(echo "${{matrix.version}}" | awk -F':' '{print $2}')
-          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:$version --amend ${{env.REGISTRY_IMAGE}}:${{ steps.meta.outputs.version }}-amd64 --amend ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
-          docker manifest push ${{ env.REGISTRY_IMAGE }}:$version
-          docker pull ${{ env.REGISTRY_IMAGE }}:$version 
-          docker trust sign ${{ env.REGISTRY_IMAGE }}:$version
-          docker manifest push ${{ env.REGISTRY_IMAGE }}:$version 
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{matrix.version}} --amend ${{env.REGISTRY_IMAGE}}:${{ steps.meta.outputs.version }}-amd64 --amend ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
+          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{matrix.version}}
+          docker pull ${{ env.REGISTRY_IMAGE }}:${{matrix.version}}
+          docker trust sign ${{ env.REGISTRY_IMAGE }}:${{matrix.version}}
+          docker manifest push ${{ env.REGISTRY_IMAGE }}:${{matrix.version}}
         env: 
           DOCKER_CONTENT_TRUST: 0
           DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
@@ -129,19 +129,24 @@ jobs:
         matrix:
           version: ${{ fromJSON(needs.get_versions_matrix.outputs.versions) }}  
     steps:
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: jpsevigny
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - 
         name: Verify signatures
         run: |
-          version=$(echo "${{matrix.version}}" | awk -F':' '{print $2}')
-          docker trust inspect --pretty ${{ env.REGISTRY_IMAGE }}:$version
+          docker trust inspect --pretty ${{ env.REGISTRY_IMAGE }}:${{matrix.version}}
       -
         name: verify that secure download works
         run: |
           version=$(echo "${{matrix.version}}" | awk -F':' '{print $2}')
-          # docker rmi ${{ env.REGISTRY_IMAGE }}:$version --force
-          docker pull ${{ env.REGISTRY_IMAGE }}:$version 
-          docker run ${{ env.REGISTRY_IMAGE }}:$version  --version         
-          # version_output=$(docker run ${{ env.REGISTRY_IMAGE }}:$version  --version)
+          # docker rmi ${{ env.REGISTRY_IMAGE }}:${{matrix.version}} --force
+          docker pull ${{ env.REGISTRY_IMAGE }}:${{matrix.version}}
+          docker run ${{ env.REGISTRY_IMAGE }}:${{matrix.version}}  --version         
+          # version_output=$(docker run ${{ env.REGISTRY_IMAGE }}:${{matrix.version}}  --version)
           # if [[ $(echo "$version_output" | grep -c "tokendito/${{steps.meta.outputs.version}}") -eq 0 ]]; then
           #  exit 1
           # fi
